css/about.css
#people {
  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/12998756_1734608490116921_7661357499823988627_n.jpg?oh=be1ad7faad6f168d700832e68fe53ecd&oe=58B23BD8') fixed center;
  background-size: 100%;
  text-align: center;
}

.our-team {
  padding-bottom: 100px;
}

.people-wrapper {
  max-width: 1200px;
  width:100%;
  padding: 50px;
}

.team-photo {
  width:213px;
  height:213px;
}

